--- a/pay/src/main/resources/application.properties
+++ b/pay/src/main/resources/application.properties
@@ -10,8 +10,15 @@ spring.datasource.url = jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UT
 spring.datasource.username = root
 # La 3em propriété pour ce connecter a la BD est le mot de passe utilisateur
 spring.datasource.password = rootroot
+
+# Hibernate propriétés
 # Spécifie au framework ORM le dialecte SQL à utiliser, cela permet d’optimiser les traitements du framework
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql = true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 
 server.port = 8080
 
